--- a/diary/build.gradle
+++ b/diary/build.gradle
@@ -19,10 +19,21 @@ repositories {
 }
 
 dependencies {
+	//DEFAULT
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//VALIDATION
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//MAPSTRUCT
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	//H2
+	runtimeOnly 'com.h2database:h2'
+	//Spring Data JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
